# bros

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_profile_fields.py  003_add_admin_logs.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/admin/: models.py  router.py  schemas.py
backend/app/ai/: deepseek.py  fallback.py  generator.py  mistral.py  prompts.py
backend/app/auth/: models.py  router.py  schemas.py  service.py
backend/app/certificates/: models.py  router.py  service.py
backend/app/game/: engine.py  models.py  router.py  schemas.py
backend/app/leaderboard/: router.py  service.py
backend/app/users/: router.py  schemas.py
backend/app/websocket/: router.py
docs/: ER_DIAGRAM.md  openapi.yaml
frontend/: package-lock.json  package.json
frontend/.claude/: settings.local.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/certificate/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/leaderboard/: page.tsx
frontend/app/missions/: page.tsx
frontend/app/play/[id]/: page.tsx
frontend/app/play/ai/: page.tsx
frontend/app/profile/: page.tsx
frontend/components/: HPBar.tsx  Navbar.tsx  PixelModal.tsx  PixelSprite.tsx  WelcomeModal.tsx
frontend/lib/: api.ts  scenarios.ts
nginx/: generate_certs.sh  nginx.conf
